<resources>
    <string name="app_name">MarktInHome</string>
    <string name="ellipsis">&#8230;</string>
    <string name="menu_Cart">Cart</string>
    <string name="menu_group">Group</string>
    <string name="menu_store">Home</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_you_wait">What You Wait</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="user_name">user name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="Continue">Continue</string>
    <string name="client_id">301662975271-gqq039c035hnbncd5ss71psdhg97b8e2.apps.googleusercontent.com</string>
    <string name="easy_to_hundel">Easy To Hundel</string>
    <string name="froget_password"><u>Forget Password</u></string>
    <string name="i_have_already_account"><u>I have already account</u></string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome back</string>
    <string name="cancel">Cancel</string>
    <string name="write">Write</string>
    <string name="Ok">ok</string>
    <string name="product_name">product name</string>
    <string name="price">price</string>
    <string name="quantity">Quantity</string>
    <string name="change_image">change image</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="product_last_price">product last Price</string>
    <string name="product_price">product Price</string>
    <string name="trademark">trademark</string>
    <string name="uplaod">Uplaod</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="create_by_x_team">Created by X-Team</string>
    <string name="totalPrice">Total Price</string>
    <string name="all_cartegories">All Cartegories</string>
    <string name="filter">filter</string>
    <string name="top_deals">#Top Deals</string>
    <string name="keywords">keywords</string>
    <string name="search_here">Search Here by product name or url</string>
    <string name="_host">www.marktinhome.com</string>
    <string name="recent_search">#recent search</string>
    <string name="edit_on_product">Edit Name of Product</string>
    <string name="edit_on_order">edit on order</string>
    <string name="your_name">your name</string>
    <string name="your_number_phone">your number phone</string>
    <string name="another_number_phone">another number phone</string>
    <string name="your_address_clearly">your address clearly</string>
    <string name="confirm">Confirm</string>
    <string name="my_order">my Order</string>
    <string name="my_recent_order">my recent Order</string>
    <string name="name_button">name button</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="get_my_location">get My Location</string>
    <string name="customer_name">Customer name :</string>
    <string name="customer_phone">Customer Phone :</string>
    <string name="custommer_address">custommer address :</string>
    <string name="another_customer_phone">Another customer Phone :</string>
    <string name="customer_location">Customer Location</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAtpMpGCaIxWOPMOH9TNWQ93_zYmwkdc44</string>
    <string name="type_here">type here ......</string>
    <string name="chat_us">Chat Us</string>
    <string name="join_us">Join Us</string>
    <string name="comment">comment</string>
    <string name="put_you_rate">put you rate ....</string>
    <string name="comments">Comments</string>
    <string name="refresh">Refresh</string>
    <string name="thanks">Thanks</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="title_activity_groups">GroupsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="history">history</string>
    <string name="creator">Creator</string>
</resources>